<resources>
    <string name="app_name">EY_APPLICATION</string>

    //NavigationView and activity main
    <string name="menu_home">Home</string>
    <string name="menu_new_word">Your new word</string>
    <string name="menu_review">Review</string>
    <string name="menu_dictionary">Dictionary</string>
    <string name="menu_word_looked_up">Word looked up</string>
    <string name="menu_account_setting">Account setting</string>
    <string name="menu_general_settings">General settings</string>
    <string name="menu_logout">Logout</string>
    <string name="title_main">Your English</string>
    // activity setting general
    <string name="setting_sound">Choose Sound </string>
    <string name="mode_language">Language</string>
    <string name="setting_notification">Choose notification mode</string>
    <string name="sound_mode">Sound mode</string>
    <string name="mode_notification">Notification mode</string>
    <string name="setting_language">Choose a language for app</string>
    //activity add word
    <string name="add">Add</string>
    <string name="remove_to">Remove to</string>
    <string name="delete_all">Delete all</string>
    <string name="mark_all">Mark all</string>
    <string name="cancel">Cancel</string>
    // activity dictionary
    <string name="title_toobar_dictionary">Dictionary English</string>
    //activity setting general
    <string name="title_toolbar_setting">General Setting</string>
    //activity login
    <string name="btn_change_page">Register Now? </string>
    //activity test
    <string name="title_test">Review</string>
    <string name="btn_search">Detail</string>
    //actvity worddetail
    <string name="tab_eng">Eng Eng</string>
    <string name="tab_synonyms">Synonyms</string>
    <string name="tab_example">Example</string>
    //fragment home
    <string name="btn_add_word"> Your new word</string>
    <string name="btn_test">Test</string>
    <string name="btn_dictionary">Dictionary</string>
    //fagment login and register
    <string name="title_register">REGISTER</string>
    <string name="title_login">LOGIN</string>
    <string name="hint_username">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_again">Password again</string>
    <string name="hint_phone">Phone</string>
    <string name="btn_loginuser">Login</string>
    <string name="btn_registeruser">Register</string>
    //us uk
    <string name="btn_us">US</string>
    <string name="btn_uk">UK</string>
    <string name="btn_next">Next</string>
    <string name="hint_input_mean">Input the meaning of the word</string>
    <string name="key_sound">sound</string>
    <string name="key_notification">notification</string>
    <string name="key_language">language</string>
    <string name="test_meaning">Review meaning</string>
    <string name="test_pronounce">Review pronouce</string>
    <string name="delete_list">Delete all list</string>
    <string name="title_add_word">Your new word</string>
    <string name="lang_viet">Vietnamese</string>
    <string name="lang_eng">English</string>
    <string name="lang_fr">French</string>
    <string name="lang_ko">Korean</string>
    <string name="lang_ja">Japanese</string>
    <string name="the_word">new word</string>
    <string name="message_save_word">Please input word you need save!</string>
    <string name="question_add_all">Do you want to add all the selected words to the checklist?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="question_delete_all">Do you want to delete all selected words?</string>
    <string name="server_error">Server Error!</string>
    <string name="message_add_review">You added a word to you review list!</string>
    <string name="message_remove_review">You was remove a word from your review list!</string>
    <string name="message_delete_all_word">You was delete all words</string>
    <string name="message_add_all_word_review">You was add all words to list reviews word</string>
    <string name="title_button_login">Register Now?</string>
    <string name="title_button_register">Login Now?</string>
    <string name="title_exit">Exit application?</string>
    <string name="title_exit_click">Click yes to exit!</string>
    <string name="toast_error_username">The user name is already in use!</string>
    <string name="toast_error_phone">The phone number is already in use!</string>
    <string name="toast_error_email">The email is already in use!</string>
    <string name="question_add_word">Are you sure, You wanted to make decision</string>
    <string name="choose_add_word">Add word</string>
    <string name="choose_exit">Exit</string>
    <string name="message_delete_review">You deleted all word reviews!</string>
    <string name="exit_process"> Are you sure you want to exit? \ n All processes will be lost. </string>
    <string name="title_translate">Translate</string>
    <string name="name_btn_translate1">English-Vietnamese</string>
    <string name="name_btn_translate2">Vietnamese-English</string>
    <string name="hint_input_translate">Enter the text to be translated</string>
    <string name="btn_result">Result</string>
    <string name="pref_name">Username</string>
    <string name="pref_email">Email</string>
    <string name="pref_phone">Phone</string>
    <string name="pref_password">Password</string>
    <string name="title_toolbar_account_setting">Account Setting</string>
   <string name="btn_save">Save</string>
    <string name="password_old">Old password </string>
    <string name="password_new">New password </string>
    <string name="password_confirm">Confirm password</string>
    <string name="change_password">Change Password</string>
    <string name="btn_change">Change</string>
    <string name="btn_cancel">Cancel</string>
    <string name = "message_check_passwordold"> Wrong old password </string>
    <string name = "message_checkpasswordnewlengh"> Must be more than 8 characters in length, including upper and lower case characters, number </string>
    <string name = "message_check_passwordconfirm"> Confirm password does not match new password </string>
</resources>