<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SeekBarPreference
        android:key="@string/key_sound"
        android:defaultValue="100"
        android:title="@string/sound_mode"
        android:summary="@string/setting_sound"
        android:max="100"
        android:icon="@drawable/volume_high2"/>
    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/key_notification"
        android:title="@string/mode_notification"
        android:summary="@string/setting_notification"
        android:icon="@drawable/bell_outline"/>
    <ListPreference
        android:key="@string/key_language"
        android:title="@string/mode_language"
        android:defaultValue="#00FFFF"
        android:entries="@array/settings_list_language"
        android:entryValues="@array/settings_list_language_value"
        android:summary="@string/setting_language"
        android:icon="@drawable/web" />
</PreferenceScreen>